assets/css/style.css
html {
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
}

body {
  background-color: rgb(4,5,7)
}

/* Style the navbar */
.topnav {
  overflow: hidden;
  background-color: #545F66;
  opacity: .5;
}

/* Navbar links */
.topnav a {
  float: right;
  display: block;
  color: #D0F4EA;
  text-align: center;
  padding: 2vw;
  text-decoration: none;
  font-size:18px;
}
.topnav a:hover {
  background-color: #95A3B3;
  color: black;
}
.topnav .icon {
  display: none;
}


/* The sticky class is added to the navbar with JS when it reaches its scroll position */
.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1000;
}

/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
.sticky+ .content {
  padding-top: 60px;
}


#splash {
  max-width: 100%;
  height: 60vw;
  background-image: url("../images/splash.jpg");
  background-repeat: no-repeat;
  background-size: 100%, 100%;

}

.aboutContainer {
  position: relative;
  text-align: center;
  color: #FFFFFF;
  font-weight: bold;
}

.centeredText {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 10vw;
}

.row {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  flex-flow: wrap;
  padding-top: 5em;

}

.column {
  
  margin: auto;
  max-width: 80%;
  color: #D0F4EA;
  font-size: 20px;
}

.responsiveImage {
  max-width: 100%;
  height: auto;
  text-align: center;
 
}
.roundedImage {
  border-radius: 25px;
}

#directContact {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-flow: wrap;
  max-width: 100%;
  
}

ul {
  display: inline-block;
}


#portfolioHeader{
  font-size: 90px;
  text-align: center;
  padding:2vw;
  color: #D0F4EA
}
#directContact{
  font-size:60px;
  color: #84DCC6
}
i {
  margin:2vw;
  text-decoration: none;
  color:#FFFFFF
}
#portfolio {
  vertical-align: top;
}
p{
  color: #D0F4EA;
}

@media screen and (max-width: 600px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}




ul {
  color: #84DCC6
}

#testpallet {
  color: #90A9B7;
  color: #272727;
  color: #D4AA7D;
  color: #EFD09E;
  color: #D2D8B3;
}

